# dynamo-mapper

./: Cargo.toml  README.md
src/: core.rs  error.rs  lib.rs  macros.rs  table.rs
src/helpers/: attribute_value.rs  condition_expression.rs  mod.rs
src/helpers/expression/: condition.rs  mod.rs  operand.rs  update.rs
src/operations/: delete_item.rs  get_item.rs  mod.rs  put_item.rs  query.rs  update_item.rs
tests/: simple.rs  single_table.rs
tests/common/: mod.rs
